--- a/travelWebSite/styles/style.css
+++ b/travelWebSite/styles/style.css
@@ -1,11 +1,24 @@
 html {
   box-sizing: border-box;
+  scroll-behavior: smooth;
+}
+
+::-webkit-scrollbar {
+  background-color: rgba(0, 0, 0, 0.25);
+  width: 6px;
+  height: 6px;
+}
+
+::-webkit-scrollbar-thumb {
+  background-color: rgba(0, 0, 0, 0.8);
 }
 
 *,
 *::after,
 *::before {
   box-sizing: inherit;
+  scrollbar-color: mediumpurple sandybrown;
+  scrollbar-width: thin;
 }
 
 .none {
@@ -44,7 +57,6 @@ a {
 
 header {
   margin: 0;
-
   background-image: url(../img/header/headerbg.jpg);
   background-repeat: no-repeat;
   background-position: bottom right;
@@ -53,11 +65,18 @@ header {
   position: relative;
 }
 
+.burger-menu {
+  display: none;
+}
+
+.mobile-list-contact_btn {
+  display: none;
+}
+
 .header-nav {
   display: flex;
   gap: 0 40px;
   color: white;
-  justify-content: space-evenly;
   max-width: 100%;
 }
 
@@ -130,7 +149,9 @@ header {
 }
 
 .book-now-btn:hover,
-.learn-more-btn:hover {
+.learn-more-btn:hover,
+.book-now-btn:active,
+.learn-more-btn:active {
   background-color: #fff;
   color: black;
 }
